samples/_failures_safe/1761090896_de33cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f3e47ed.c: In function ‘main’:
./samples/SAFE/__tmp_8f3e47ed.c:155:33: error: expected ‘)’ at end of input
  155 |     initialize_state_machine(&sm
      |                             ~   ^
      |                                 )
./samples/SAFE/__tmp_8f3e47ed.c:155:5: error: expected declaration or statement at end of input
  155 |     initialize_state_machine(&sm
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
